# back-end/Aulas/aula10/routes/router_produtos.js
@@ -1,9 +1,28 @@
-const express = require('express');
+const express = require("express");
 
-const controllerProdutos = require('../controllers/controller_produto');
+const controllerProdutos = require("../controllers/controller_produto");
 
 const router = express.Router();
 
 router.post("/", controllerProdutos.validar, controllerProdutos.criar);
+
+router.get("/", controllerProdutos.listar);
+
+router.get(
+  "/:id",
+  controllerProdutos.buscar,
+  controllerProdutos.obter
+);
+
+router.put('/:id',
+ controllerProdutos.buscar,
+ controllerProdutos.validar,
+ controllerProdutos.atualizar
+);
+
+router.delete('/:id', 
+controllerProdutos.buscar,
+controllerProdutos.remover
+);
 
 module.exports = router;
