# back-end/Aulas/aula10/swagger.yaml
@@ -1,3 +1,4 @@
+
 openapi: 3.0.0
 info:
   title: API Loja Virtual
@@ -11,18 +12,106 @@ paths:
         - produtos
       requestBody:
         content:
-          application-json:
+          application/json:
             schema:
               $ref: '#/components/schemas/Produto'
       responses:
         201:
           content:
-            application-json:
+            application/json:
               schema:
                 $ref: '#/components/schemas/Produto'
         422:
           content:
-            application-json:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    get:
+      tags:
+        - produtos
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#components/schemas/Produto'
+  /produtos/{id}:
+    get:
+      tags:
+        - produtos
+      parameters:
+        - in: path
+          name: id
+          type: string
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Produto'
+        400:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    put:
+      tags:
+        - produtos
+      parameters:
+        - in: path
+          name: id
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Produto'
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Produto'
+        400:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        404:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        422:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+    delete:
+      tags:
+        - produtos
+      parameters:
+        - in: path
+          name: id
+          type: string
+      responses:
+        204:
+          content:
+        400:
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Mensagem'
+        404:
+          content:
+            application/json:
               schema:
                 $ref: '#/components/schemas/Mensagem'
 components:
@@ -34,8 +123,7 @@ components:
           type: string
         preco:
           type: number
-    Mensagem: 
+    Mensagem:
       type: object
       properties:
         msg:
-          type: string
